[gd_scene load_steps=5 format=2]

[ext_resource path="res://sprites/items/door.png" type="Texture" id=1]
[ext_resource path="res://scripts/items/Door.gd" type="Script" id=2]
[ext_resource path="res://sprites/items/key.png" type="Texture" id=3]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 33, 41 )

[node name="Door" type="Area2D"]
z_index = -10
collision_layer = 0
monitorable = false
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
scale = Vector2( 0.175758, 0.175758 )
texture = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 1, 3 )
shape = SubResource( 1 )

[node name="LockedSprite" type="Sprite" parent="."]
modulate = Color( 1, 1, 1, 0.388235 )
position = Vector2( 0, -68 )
scale = Vector2( 0.0489061, 0.0489061 )
texture = ExtResource( 3 )

[connection signal="area_entered" from="." to="." method="_on_Door_area_entered"]
[connection signal="area_exited" from="." to="." method="_on_Door_area_exited"]
